AUT-2073 Use ui_locales and post_logout_redirect_uri from LogoutRequestInfo instead of taking it from the request_url